added google fonts size

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <title>influencer-website</title>
   <link rel="stylesheet" href="styles/influencer.css">
 </head>
-<body>
+<body class="work-sans-font">
   <header>
+    <nav class="navbar">
+      <h3 class="banner">Influencer products</h3>
+
+    </nav>
 
   </header>
   <main>
